# TileMap-Editor

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  editor.cc  editor.h  layout.xml  tileset.cc  tileset.h  vcpkg.json
assets/: imgui.ini
cmake/: copy-assets.cmake  dependencies.cmake
core/: hbuffer.cc  hbuffer.h  settings.cc  settings.h  tileset.cc  window_ui.h  world.cc
include/: editor.h  menubar.cc  tileset.cc  viewport.cc  world.cc
include/core/: custom_types.h  ts_loader.h  ts_loader_impl.cc  umap_handler.h  umap_handler_impl.cc
include/util/: console.cc  console.h
source/: CMakeLists.txt
source/core/: CMakeLists.txt  common.h  map-handler-impl.cpp  map-handler.h  tileset-loader-impl.cpp  tileset-loader.h  ts_loader.h  ts_loader_impl.cpp  umap_handler.h  umap_handler_impl.cpp
source/editor/: CMakeLists.txt  editor-menubar.cpp  editor-tileset-viewer.cpp  editor-viewport.cpp  editor.cpp  editor.h
source/util/: CMakeLists.txt  console.cpp
util/: console.cc  console.h
util/assets/: imgui.ini
